tests/snapshots/file@base@for@fun_in_body.lox.snap
---
source: tests/common/mod.rs
description: "// [line 2] Error at 'fun': Expect expression.\nfor (;;) fun foo() {}\n"
input_file: crafting_interpreters_test_files/for/fun_in_body.lox
---
OUT: 

===
ERR: 
  × Static errors

Error:   × expected one of the following: 'number, (, -, !, string, ident, nil, true, false, this, super', found 'fun'
   ╭─[2:10]
 1 │ // [line 2] Error at 'fun': Expect expression.
 2 │ for (;;) fun foo() {}
   ·          ─┬─
   ·           ╰── here
   ╰────
