tests/snapshots/file@base@for@return_closure.lox.snap
---
source: tests/common/mod.rs
description: "fun f() {\n  for (;;) {\n    var i = \"i\";\n    fun g() { print i; }\n    return g;\n  }\n}\n\nvar h = f();\nh(); // expect: i\n"
input_file: crafting_interpreters_test_files/for/return_closure.lox
---
OUT: 
i

===
ERR:
