tests/snapshots/file@base@function@missing_arguments.lox.snap
---
source: tests/common/mod.rs
description: "fun f(a, b) {}\n\nf(1); // expect runtime error: Expected 2 arguments but got 1.\n"
input_file: crafting_interpreters_test_files/function/missing_arguments.lox
---
OUT: 

===
ERR: 
  × wrong number of arguments, expected 2, got 1
   ╭─[3:2]
 2 │ 
 3 │ f(1); // expect runtime error: Expected 2 arguments but got 1.
   ·  ┬
   ·  ╰── here
   ╰────
